# langfair

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  test_adversarial.ipynb
.github/workflows/: ci.yaml  docs-versioning.yaml
data/: counterfactual_templates.json
examples/adversarial/: adversarial_counterfactual.ipynb  adversarial_toxicity.ipynb
examples/evaluations/classification/: classification_metrics_demo.ipynb
examples/evaluations/recommendation/: recommendation_metrics_demo.ipynb
examples/evaluations/text_generation/: auto_eval_demo.ipynb  counterfactual_metrics_demo.ipynb  stereotype_metrics_demo.ipynb  toxicity_metrics_demo.ipynb
examples/generators/: response_generator_demo.ipynb
langfair/auto/: auto.py
langfair/cache/: __init__.py  _cache.py
langfair/constants/: word_lists.py
langfair/generator/: __init__.py  adversarial.py  counterfactual.py  generator.py  original_counterfactual.py  redteaming.py
langfair/metrics/: __init__.py
langfair/metrics/counterfactual/: counterfactual.py
langfair/metrics/counterfactual/metrics/: bleu.py  cosine.py  rougel.py  sentimentbias.py
langfair/metrics/stereotype/: stereotype.py
langfair/metrics/stereotype/metrics/: associations.py  classifier.py  cooccurrence.py
langfair/metrics/toxicity/: toxicity.py
langfair/metrics/utils/classifier_metrics/baseclass/: metrics.py
langfair/utils/: display.py
tests/: conftest.py  test_adversarial.py  test_counterfactual_metrics.py  test_counterfactualgenerator.py  test_display.py  test_responsegenerator.py
tests/data/autoeval/: generate_autoeval_data.ipynb
tests/data/counterfactual/: counterfactual_data_file.json  counterfactual_results_file.json  generate_counterfactual_data.ipynb
tests/data/toxicity/: generate_toxicity_data.ipynb
