[project]
name = "langfair"
version = "0.8.0"
description = "LangFair is a Python library for conducting use-case level LLM bias and fairness assessments"
authors = [
    { name = "Dylan Bouchard", email = "dylan.bouchard@cvshealth.com" },
    { name = "Mohit Singh Chauhan", email = "mohitsingh.chauhan@cvshealth.com" },
]
requires-python = ">=3.9,<3.14"
readme = "README.md"
license = "Apache-2.0 AND MIT"
maintainers = [
    { name = "Dylan Bouchard", email = "dylan.bouchard@cvshealth.com" },
    { name = "Mohit Singh Chauhan", email = "mohitsingh.chauhan@cvshealth.com" },
    { name = "David Skarbrevik", email = "david.skarbrevik@cvshealth.com" },
    { name = "Viren Bajaj", email = "bajajv@aetna.com" },
    { name = "Zeya Ahmad", email = "zeya.ahmad@cvshealth.com" },
]
keywords = [
    "LLM",
    "large language model",
    "bias",
    "fairness",
    "Responsible AI",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.26.4,<2",
    "scipy>=1.13.0,<1.15.0 ; python_full_version >= '3.9' and python_full_version < '3.10'",
    "scipy>=1.15.0,<2 ; python_full_version >= '3.10'",
    "vadersentiment>=3.3.2,<4",
    "evaluate>=0.4.1,<0.5",
    "nltk>=3.8.2",
    "sacremoses>=0.1.1,<0.2",
    "rouge-score>=0.1.2,<0.2",
    "detoxify>=0.5.2,<0.6",
    "langchain>=0.3.7",
    "asyncio>=3.4.3,<4",
    "sentence-transformers>=3.10",
    "typing>=3.7.4,<4 ; python_full_version < '3.10'",
    "tiktoken>=0.7,<0.12",
    "transformers>=4.52.1",
    "torch>=2.6.0",
    "rich==13.8.0",
    "ipywidgets>=8.1.7,<9",
]

[project.urls]
Homepage = "https://github.com/cvs-health/langfair"
Repository = "https://github.com/cvs-health/langfair"
Documentation = "https://cvs-health.github.io/langfair/latest/index.html"

[dependency-groups]
dev = [
    "langchain-openai>=0.2.9,<0.3",
    "pre-commit==3.7.1",
    "ruff==0.12.9",
    "pytest>=8.3.3,<9",
    "pytest-asyncio>=0.24,<1.2",
    "ipykernel>=6.29.5,<7",
    "ipywidgets>=8.1.5,<9",
    "python-dotenv>=1.0.1,<2",
    "bandit>=1.8.6,<2",
    "jupyter-core>=5.8.1",
]
docs = [
    "sphinx==7.4.7",
    "pydata_sphinx_theme==0.16.1",
    "sphinxcontrib-bibtex==2.6.3",
    "sphinx-autodoc-typehints==2.2.0",
    "sphinx-gallery==0.18.0",
]
extra_llms = [
    "langchain-mistralai>=0.2.2,<0.3",
    "langchain-google-vertexai>=2.0.13,<3",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = [
    "langfair",
    "langfair.metrics",
    "langfair.generator",
    "langfair.utils",
]
module-root = ""
source-exclude = [
    "docs",
    "docs_src",
]
wheel-exclude = [
    "docs",
    "docs_src",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = ["I","S"] # lets Ruff catch and fix unsorted imports and run bandit
ignore = ["E712","S101"]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning"
]
